# dnsforge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: ci.yaml  release.yaml
debian/: changelog  control  copyright  rules
examples/: example.rhai
src/: cli.rs  diff.rs  display.rs  error.rs  keystore.rs  main.rs  sync.rs
src/dns/: axfr.rs  mod.rs  record.rs  tsig.rs  update.rs
src/script/: builtins.rs  mod.rs
