[package]
name = "dnsforge"
version = "0.3.0"
edition = "2024"
description = "Declarative DNS zone manager with Rhai scripting"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# DNS
hickory-proto = { version = "0.25", features = ["dnssec-ring"] }
hickory-client = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# Scripting
rhai = "1"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util"] }

# Crypto (key encryption)
aes-gcm = "0.10"
argon2 = "0.5"
rpassword = "7"
rand = "0.8"

# Terminal
crossterm = "0.28"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Paths
dirs = "6"

# Encoding
base64 = "0.22"

# Futures
futures-core = "0.3"
